--- a/public/index.html
+++ b/public/index.html
@@ -4,14 +4,13 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <link rel="icon" href="/favicon.ico">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-
-    <title>ventus</title>
+    <title>Ventus</title>
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but ventus doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong>We're sorry but Ventus doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app">
       
